fix header z-index

--- a/Publishing/resources/css/style.css
+++ b/Publishing/resources/css/style.css
@@ -90,7 +90,7 @@ p { line-height: 1.6em; word-break: keep-all; }
     top: 0;
     width: 100%;
     height: 80px; 
-    z-index: 1500;
+    z-index: 1000;
 }
 
 .nav-area a, .auth-area a {
